[package]
name = "lib"
version = "0.1.0"
edition = "2021"
# include = ["./src/**/*.rs", "Cargo.toml"]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]

eframe = "0.27.2"
egui = { version = "0.27.2", features = ["mint", "serde"] }
egui_plot = "0.27.2"
egui_extras = "0.27.2"
egui_glow = "0.27.2"

once_cell = "1.19.0"

log = "0.4"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = { version = "0.3.30" }

url = { version = "2.5.1", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["stream"] }
sxd-xpath = "0.4.2"
sxd_html = "0.1.1"
sxd-document = "0.3.2"

serde = "1"
serde_derive = "1"
bincode = "=2.0.0-rc.3"

md5 = "0.7.0"
glam = { version = "0.28.0", features = ["mint", "serde"] }
mint = { version = "0.5.9" }
polars = { version = "0.41.2", features = ["lazy"] }
ndarray = "0.15.6"
memmap2 = "0.9.4"

keyring = "2.3.3"
